# picture-extraction

./: README.md  picture-extraction.cabal
app/: Main.hs
example/: japari-inside.tiff  trivial.xcf
src/: Graph.hs  MarkovRandomField.hs  Util.hs
src/Graph/: MinCut.hs
src/Image/: Outline.hs  PixelDistance.hs
