name:                picture-extraction
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KPCCoiL/picture-extraction
license:             BSD3
license-file:        LICENSE
author:              CoiL
maintainer:          copernicium[at]me.com
copyright:           2017 CoiL
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graph
                     , Graph.MinCut
                     , Image.Outline
                     , Image.PixelDistance
                     , MarkovRandomField
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels >= 3.2.8.3
                     , unordered-containers >= 0.2.8.0
                     , containers >= 0.5.7.1
                     , hashable >= 1.2.6.0
  default-language:    Haskell2010

executable picture-extraction-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , picture-extraction
                     , JuicyPixels >= 3.2.8.3
  default-language:    Haskell2010

test-suite picture-extraction-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , picture-extraction
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KPCCoiL/picture-extraction
